hphp/hack/test/package/v2/package_access/include_paths_bad1.php--bar.php
<?hh
// package pkg1
type TBar = TFoo;
